--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="grid-container"></div>
+    <h1>Etch-a-Sketch</h1>
+    <div class="grid-container center"></div>
   </body>
 </html>
 <script src="script.js"></script>
