--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Etch-a-Sketch</h1>
+    <button type="button" class="button">New Grid</button>
     <div class="grid-container center"></div>
   </body>
 </html>
