add hover then change colour to grey

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   </head>
   <body>
     <h1>Etch-a-Sketch</h1>
-    <button type="button" class="button">New Grid</button>
-    <div class="grid-container center"></div>
+    <div class="center">
+      <button type="button" class="button">New Grid</button>
+    </div>
+    <div class="center">
+      <div class="grid-container"></div>
+    </div>
   </body>
 </html>
 <script src="script.js"></script>
